adding style to the page

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -9,15 +9,11 @@ main {
     flex: 2;
     justify-content: center;
     text-align: center;
-    margin: 1rem;
-    background: rgba(238, 234, 234, 0.7);
-}
-
-p {
-    margin: 1rem;
+    background:#eaedeeb3;
 }
 
 section {
+    color: #000000b0;
     max-width: 800px;
     margin: 1rem auto;
 }
