register service workers

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -42,6 +42,12 @@
                 </li>
               </ul>
         </footer>
-
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script>
     </body>
 </html>
